# bee-monitoring-system

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  config.py  export_openapi.py  main.py  openapi.json  pyproject.toml  test_imports_safe.py
backend/db/: mongodb.py
backend/models/: schemas.py
backend/routers/: analytics.py  jobs.py
backend/schemas/: schemas.py
backend/services/: annotator.py  behavior.py  counter.py  ffmpeg_service.py  orientation.py  pipeline.py  pipeline_stages.py  ramp_detector.py  track_history.py  tracker_factory.py  video_processor.py
backend/tests/: test_counter.py  test_orientation.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: JobConfigPanel.tsx  JobDetailModal.tsx  LiveStatsPanel.tsx  RunComparisonModal.tsx
frontend/src/pages/: Analytics.tsx  Upload.tsx
research/: .gitignore  README.md  pyproject.toml
research/config/: config.yaml
research/config/experiment/: bee_pose.yaml  pose_baseline.yaml  ramp_detection.yaml  ramp_segmentation.yaml
research/notebooks/: eda_ramp.ipynb
research/src/: data_manager.py  download.py  prepare.py  run_experiment.py
scripts/: launch.py
